name:                ekg-common
version:             0.4.0
synopsis:            Remote monitoring of processes
description:
  This library lets you remotely monitor a running process over HTTP.
  It provides a simple way to integrate a monitoring server into any
  application.
homepage:            https://github.com/tibbe/ekg
license:             BSD3
license-file:        LICENSE
author:              Johan Tibell
maintainer:          johan.tibell@gmail.com
category:            System, Network
build-type:          Simple
cabal-version:       >=1.6
extra-source-files:  README.md
                     examples/Basic.hs

library
  exposed-modules:     System.Remote.Counter
                       System.Remote.Gauge
                       System.Remote.Label
                       System.Remote.Level
                       System.Remote.GHC
                       System.Remote.Ekg
                       System.Remote.Registry

  other-modules:       System.Remote.Counter.Internal
                       System.Remote.Gauge.Internal
                       System.Remote.Label.Internal
                       System.Remote.Level.Internal
                       System.Remote.Registry.Internal

  build-depends:       aeson < 0.7,
                       base >= 4.5 && < 5,
                       bytestring < 1.0,
                       containers < 0.6,                       
                       text < 0.12,
                       time < 1.5,
                       transformers < 0.4,
                       unordered-containers < 0.3
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/tibbe/ekg.git
