name:                ekg-common
version:             0.4.0
synopsis:            Remote monitoring of processes
description:
  This library lets you remotely monitor a running process over HTTP.
  It provides a simple way to integrate a monitoring server into any
  application.
homepage:            https://github.com/tibbe/ekg
license:             BSD3
license-file:        LICENSE
author:              Johan Tibell
maintainer:          johan.tibell@gmail.com
category:            System, Network
build-type:          Simple
cabal-version:       >=1.6
extra-source-files:  README.md
                     examples/Basic.hs

library
  exposed-modules:     System.Remote.Counter
                       System.Remote.Gauge
                       System.Remote.Label
                       System.Remote.PullGauge
                       System.Remote.GHC
                       System.Remote.Ekg
                       System.Remote.Registry
                       System.Remote.Stats.Atomic
                       System.Remote.Stats.EWMA
                       System.Remote.Stats.Sample.UniformSample
                       System.Remote.Stats.Sample.ExpDecayingSample
                       System.Remote.Stats.Sample
                       System.Remote.Stats.Snapshot
                       System.Remote.Stats.Histogram
                       System.Remote.Stats.Meter
                       System.Remote.Stats.Time

  other-modules:       Paths_ekg_common
                       System.Remote.Counter.Internal
                       System.Remote.Gauge.Internal
                       System.Remote.Label.Internal
                       System.Remote.PullGauge.Internal
                       System.Remote.Registry.Internal

  build-depends:       aeson < 0.7,
                       base >= 4.5 && < 5,
                       bytestring < 1.0,
                       containers < 0.6,                       
                       text < 0.12,
                       time < 1.5,
                       transformers < 0.4,
                       unordered-containers < 0.3,
                       time-units >= 1.0.0,
                       hashmap >= 1.3,
                       array >= 0.4,
                       random >= 1.0,
                       vector >= 0.10
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/tibbe/ekg.git
